--- a/build.gradle
+++ b/build.gradle
@@ -221,7 +221,7 @@ dependencyManagement {
 
 repositories {
   mavenLocal()
-  jcenter()
+  maven { url 'https://jitpack.io' }
   mavenCentral()
 }
 
@@ -265,9 +265,9 @@ dependencies {
   implementation group: 'io.springfox', name: 'springfox-boot-starter', version: versions.springfoxSwagger
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
 
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  implementation (group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0') {
+  implementation group: 'com.github.hmcts.java-logging', name: 'java-logging', version: versions.reformLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'java-logging-appinsights', version: versions.reformLogging
+  implementation (group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version: '0.1.0') {
     exclude group: 'org.hibernate', module: 'hibernate-core'
   }
 
@@ -288,7 +288,7 @@ dependencies {
 
   compile group: 'javax.xml', name: 'jaxb-api', version: '2.1'
 
-  compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
+  compile group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.2'
   compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
 
   testImplementation libraries.junit5
